storage-system/storage-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-app
  labels:
    component: server
spec:
  type: NodePort
  ports:
  - port: 8070
    name: http
    nodePort: 30002
  selector:
    component : storage-system-postgres
